package main.Model.GestionDePublicaciones;

public class Publicacion {
    
}
