Propuesta de Diagrama de Paquetes 4

@startuml Diagrama de Paquetes

left to right direction

package "GestiondePublicaciones" {
class "FormularioDePublicacion" as UC7
class "GestorDePublicaciones" as UC8
class "Publicacion" as UC9
}

package "GestionDeUsuario" {
class "FormularioInicioDeSesion" as UC1
class "GestorInicioDeSesion" as UC2
class "Usuario" as UC13
class "FormularioDeRegistro" as UC15

}

package "GestionDeRevision" {
class "VistaDeEvento" as UC17
class "VistaDePublicacion" as UC18
class "GestorDeRevision" as UC19
}


package "GestionDeEventos" {
    class "FormularioDeEventos" as UC3
    class "GestorDeEventos" as UC4
    class "Evento" as UC5

}

package "GestionDeCalendario"{
    class "GestorDeCalendario" as gca
    class "VistaDeCalendario" as vca
    class "Calendario" as cal
}

GestionDeCalendario ..> GestionDeUsuario
GestiondePublicaciones ..> GestionDeUsuario
GestiondePublicaciones <.. GestionDeRevision
GestionDeEventos <.. GestionDeRevision 
GestionDeEventos <.. GestionDeCalendario

@enduml